# lumen-browser

./: .gitattributes  .gitignore  BUGS.md  CAPABILITIES.md  CLAUDE.md  CSS-SPECS.md  Cargo.toml  DECISIONS.md  EXPERIMENT.md  HANDOFF-real-sites.md  README.md  ROADMAP.md  SESSION-HANDOFF-2026-06-27.md  STATUS-P1.md  STATUS-P2.md  STATUS-P3.md  STATUS-P4.md  STATUS-P5.md  STATUS.md  SUBSYSTEMS.md  SYMBOLS.md  TEAM-CHARTER.md  css-2026-compliance.md  last_session.db-shm  last_session.db-wal  lumen-plan.md  test.html  test_multipage.html
crates/ai/: Cargo.toml
crates/ai/src/: embedding.rs  generation.rs  http.rs  lib.rs  rag.rs
crates/bench/: Cargo.toml  UPDATE.md  baseline.json
crates/bench/src/: bfcache_restore.rs  ci_gate.rs  main.rs  startup.rs  util.rs
crates/bidi-server/: Cargo.toml
crates/bidi-server/src/: protocol.rs  server.rs  transport.rs
crates/core/: Cargo.toml
crates/core/src/: capability.rs  color.rs  crash.rs  error.rs  event.rs  ext.rs  form.rs  geom.rs  hash.rs  icc.rs  idn.rs  json.rs  lib.rs  memory_pressure.rs  module.rs  pcs.rs  profile.rs  punycode.rs  sandbox.rs  spell.rs  sri.rs  trace.rs  url.rs  web_storage.rs
crates/core/tests/: icc_real_profile.rs
crates/devtools/: Cargo.toml
crates/devtools/src/: cdp.rs  lib.rs  server.rs  ws.rs
crates/driver/: Cargo.toml  ISOLATION.md
crates/driver/src/: automation.rs  context.rs  determinism.rs  gpu_session.rs  isolation.rs  lib.rs  live_session.rs  session.rs  types.rs  winit_session.rs
crates/driver/tests/: all.rs  antidetect_surface.html  common.rs  isolation.rs  mock_transport.rs  snapshot_cpu.rs  snapshot_generator.rs  snapshot_vs_edge.rs  test_01_sanity.rs  test_02_color_named.rs  test_03_color_formats.rs  test_04_color_alpha.rs  test_05_border_width.rs  test_06.rs  test_07.rs  test_08_padding.rs  test_09.rs  test_10.rs  test_11.rs  test_12.rs  test_13_visibility_opacity.rs  test_14.rs  test_15.rs  test_16.rs  test_17.rs  test_18_images.rs  test_19.rs  test_20.rs  test_21.rs  test_22_transform.rs  test_23.rs  test_24.rs  test_25.rs  test_26.rs  test_26_mask_image.rs  test_27.rs  test_28.rs  test_29.rs  test_30.rs  test_31.rs  (+19 more)
crates/driver/tests/cases/: antidetect_surface_api.rs  compare_backends.rs  isolation.rs  mod.rs  snapshot_cpu.rs  snapshot_generator.rs  snapshot_vs_edge.rs  test_00_calibration.rs  test_01_sanity.rs  test_03_color_formats.rs  test_05_border_width.rs  test_06.rs  test_07.rs  test_08_padding.rs  test_09.rs  test_11.rs  test_12.rs  test_13_visibility_opacity.rs  test_15.rs  test_16.rs  test_18_images.rs  test_19.rs  test_20.rs  test_22_transform.rs  test_23.rs  test_24.rs  test_26_mask_image.rs  test_28.rs  test_29.rs  test_30.rs  (+23 more)
crates/engine/a11y/: Cargo.toml
crates/engine/canvas/: Cargo.toml
crates/engine/css-parser/: Cargo.toml
crates/engine/encoding/: Cargo.toml
crates/engine/font/: Cargo.toml
crates/engine/html-parser/: Cargo.toml
crates/engine/image/: Cargo.toml
crates/engine/layout/: Cargo.toml
crates/engine/paint/: Cargo.toml
crates/ipc/: Cargo.toml
crates/ipc/src/: lib.rs
crates/js/: Cargo.toml
crates/js/src/: async_context.rs  attribution_reporting.rs  audio_bindings.rs  audio_element.rs  background_fetch.rs  background_sync.rs  badging.rs  battery_bindings.rs  bluetooth.rs  broadcast_channel.rs  canvas2d.rs  clipboard.rs  close_watcher.rs  compute_pressure.rs  contacts.rs  content_index.rs  cookie_banner.rs  cookie_store.rs  credentials.rs  csp.rs  css_properties_values_api.rs  decorators.rs  device_sensors.rs  digital_credentials.rs  document_pip.rs  documentpip_bindings.rs  dom.rs  dom_parser.rs  download_bindings.rs  element_internals.rs  es2026_proposals.rs  esm.rs  eye_dropper.rs  file_input.rs  filesystem_access.rs  form_validation.rs  gamepad.rs  gc_policy.rs  generic_sensor.rs  geolocation.rs  (+85 more)
crates/js/tests/: all.rs  indexed_db.rs  no_automation_markers.rs  speech_api.rs  webauthn_credentials.rs
crates/knowledge/: Cargo.toml
crates/knowledge/src/: fts.rs  history.rs  lib.rs  notes.rs  open_tabs.rs  read_later.rs  semantic.rs  store.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: lib.rs  live.rs  main.rs  protocol.rs  server.rs  transport.rs
crates/network/: Cargo.toml
crates/network/assets/: hsts_preload.json
crates/network/src/: auth.rs  brotli.rs  coop.rs  cors.rs  csp.rs  ctap2.rs  dns.rs  doh.rs  dot.rs  flate.rs  hsts.rs  hsts_preload.rs  http_cache.rs  lib.rs  mixed_content.rs  mock.rs  origin.rs  permissions_policy.rs  pool.rs  range.rs  remote.rs  sandbox.rs  socks5.rs  sse.rs  tls.rs  webauthn.rs
crates/network/tests/: all.rs  http_client_fingerprint_profile.rs  tls_integration.rs
crates/shell/: Cargo.toml
crates/shell/src/: adblock.rs  address_bar.rs  animation_scheduler.rs  backend_factory.rs  bench_frames.rs  chrome_preview.rs  click_log.rs  config.rs  deterministic.rs  download.rs  engine_thread.rs  find.rs  forms.rs  gc_tick.rs  health_log.rs  hints.rs  image_cache.rs  input.rs  links.rs  main.rs  memory_poll.rs  momentum_anim.rs  network_service.rs  newtab.rs  notification.rs  page_context_menu.rs  panel_layout.rs  prefetch.rs  reader_view.rs  render_thread.rs  runtime.rs  scroll_anim.rs  scrollbar.rs  session_persist.rs  source_view.rs  spellcheck.rs  svg_image.rs  tab_lifecycle.rs  theme_tokens.rs  toolbar.rs  (+2 more)
crates/shell/tests/: ipc_server.rs
crates/storage/: Cargo.toml
crates/storage/src/: a11y_prefs.rs  adblock.rs  autofill.rs  bfcache.rs  bookmarks.rs  broadcast_channels.rs  browser_settings.rs  cache_storage.rs  cached_dns.rs  cookies.rs  csp_policies.rs  dns_cache.rs  downloads.rs  history.rs  hsts.rs  http_cache.rs  indexed_db.rs  keyboard_shortcuts.rs  lib.rs  newtab_tiles.rs  notifications.rs  omnibox_aliases.rs  permissions.rs  permissions_policy.rs  plugins.rs  print_prefs.rs  profile_vault.rs  profiles.rs  psl.rs  push_subscriptions.rs  referrer_policy.rs  safe_browsing.rs  search_history.rs  search_providers.rs  service_workers.rs  session_export.rs  session_store.rs  site_engagement.rs  sqlite_store.rs  store.rs  (+7 more)
crates/storage/tests/: hibernate_compression.rs
(+1438 files in other folders)
