[workspace]
resolver = "3"
members = [
    "crates/shell",
    "crates/core",
    "crates/devtools",
    "crates/driver",
    "crates/mcp",
    "crates/js",
    "crates/network",
    "crates/storage",
    "crates/knowledge",
    "crates/bench",
    "crates/engine/html-parser",
    "crates/engine/css-parser",
    "crates/engine/dom",
    "crates/engine/layout",
    "crates/engine/paint",
    "crates/engine/font",
    "crates/engine/encoding",
    "crates/engine/image",
    "crates/engine/canvas",
    "crates/engine/a11y",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
authors = ["Lumen contributors"]
license = "MPL-2.0"
rust-version = "1.95"

[workspace.dependencies]
lumen-core = { path = "crates/core" }
lumen-devtools = { path = "crates/devtools" }
lumen-js = { path = "crates/js" }
lumen-network = { path = "crates/network" }
lumen-driver = { path = "crates/driver" }
lumen-storage = { path = "crates/storage" }
lumen-knowledge = { path = "crates/knowledge" }
lumen-html-parser = { path = "crates/engine/html-parser" }
lumen-css-parser = { path = "crates/engine/css-parser" }
lumen-dom = { path = "crates/engine/dom" }
lumen-layout = { path = "crates/engine/layout" }
lumen-paint = { path = "crates/engine/paint" }
lumen-font = { path = "crates/engine/font" }
lumen-encoding = { path = "crates/engine/encoding" }
lumen-image = { path = "crates/engine/image" }
lumen-canvas = { path = "crates/engine/canvas" }
lumen-a11y = { path = "crates/engine/a11y" }

# Exception #1 (§5): OS event loop + окна. Свой = годы Win32/X11/Wayland/AppKit.
winit = "0.30"
# Exception #2 (§5): GPU API. Свой = ад driver-bugs под Vulkan/Metal/DX12.
wgpu = "26"
# Exception #3 (§5): TLS / crypto. Своя реализация — security antipattern.
rustls = { version = "0.23", features = ["std"] }
webpki-roots = "0.26"
# Exception #5 (§5): SQLite — persistent storage для history, bookmarks, notes,
# read-later, cookies (TTL), профилей и knowledge layer (FTS5). 25 лет audit-а
# и TH3-тестирование; стандарт в индустрии браузеров (Firefox places.sqlite,
# Chromium History, Safari). Feature `bundled` компилирует SQLite в бинарь —
# нулевая runtime-зависимость от системного libsqlite3.
rusqlite = { version = "0.32", features = ["bundled"] }
# Exception #6 (§5): regex — find-in-page regex matching; стандарт де-факто в Rust.
regex = "1"
# Exception #7 (§5): serde + bincode — DOM snapshot serialization для T3 hibernation
# (ADR-008 Invariant 1). serde — де-факто стандарт сериализации в Rust. bincode —
# compact binary format без heap-allocation на decode; размер снимка ~5× меньше JSON.
# Graduation: permanent (используется во всех крейтах где нужен snapshot/IPC).
serde = { version = "1", features = ["derive"] }
bincode = "1"
# Provisional: flate2 для ICC profile decompression в PNG (iCCP chunk uses deflate).
flate2 = "1"

[profile.dev]
opt-level = 1

# Сторонние зависимости (wgpu, winit, rustls, webpki-roots и их транзитивный
# набор ~200 крейтов) собираются с opt-level = 3 даже в dev. Наш код остаётся
# на opt-level = 1: умеренная скорость компиляции при сохранении читаемой
# stack-trace. Wildcard `*` действует только на dependencies (не workspace
# members), поэтому собственные крейты Lumen не затрагиваются.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
