[workspace]
resolver = "3"
members = [
    "crates/shell",
    "crates/ai",
    "crates/core",
    "crates/bidi-server",
    "crates/devtools",
    "crates/driver",
    "crates/mcp",
    "crates/js",
    "crates/network",
    "crates/storage",
    "crates/knowledge",
    "crates/bench",
    "crates/ipc",
    "crates/engine/html-parser",
    "crates/engine/css-parser",
    "crates/engine/dom",
    "crates/engine/layout",
    "crates/engine/paint",
    "crates/engine/font",
    "crates/engine/encoding",
    "crates/engine/image",
    "crates/engine/canvas",
    "crates/engine/a11y",
    "workspace-hack",
]

[workspace.package]
version = "0.5.0"
edition = "2024"
authors = ["Lumen contributors"]
license = "MPL-2.0"
rust-version = "1.95"

[workspace.dependencies]
lumen-core = { path = "crates/core" }
lumen-ai = { path = "crates/ai" }
lumen-ipc = { path = "crates/ipc" }
lumen-bidi-server = { path = "crates/bidi-server" }
lumen-devtools = { path = "crates/devtools" }
lumen-js = { path = "crates/js" }
lumen-network = { path = "crates/network" }
lumen-driver = { path = "crates/driver" }
lumen-mcp = { path = "crates/mcp" }
lumen-storage = { path = "crates/storage" }
lumen-knowledge = { path = "crates/knowledge" }
lumen-html-parser = { path = "crates/engine/html-parser" }
lumen-css-parser = { path = "crates/engine/css-parser" }
lumen-dom = { path = "crates/engine/dom" }
lumen-layout = { path = "crates/engine/layout" }
# default-features = false: each crate opts in to the backend it needs.
# Shell opts in to backend-femtovg (Phase 2 default, ADR-010 RB-9).
# Driver/bench/js opt in to nothing (they don't need a windowed GPU backend).
lumen-paint = { path = "crates/engine/paint", default-features = false }
lumen-font = { path = "crates/engine/font" }
lumen-encoding = { path = "crates/engine/encoding" }
lumen-image = { path = "crates/engine/image" }
lumen-canvas = { path = "crates/engine/canvas" }
lumen-a11y = { path = "crates/engine/a11y" }

# Exception #1 (§5): OS event loop + окна. Свой = годы Win32/X11/Wayland/AppKit.
winit = "0.30"
# Exception #2 (§5): GPU API. Свой = ад driver-bugs под Vulkan/Metal/DX12.
# Feature-diet (§4.2 build-speed): держим ровно один-два нативных бэкенда wgpu
# на платформу — отключаем дефолт-фичи, чтобы из дерева ушли лишние ash/glow/metal-rs.
# femtovg — основной рендерер; wgpu лишь fallback/WebGPU-бэкенд. Версия закреплена
# здесь как единый источник правды; сам набор `features` — per-target и живёт в
# crates/engine/paint/Cargo.toml (workspace.dependencies не поддерживает
# `[target.'cfg(...)'.dependencies]`, поэтому платформенный выбор бэкенда не может
# жить в этой секции). Windows: dx12+vulkan+gl (backend_probe пробует Vulkan→GL→DX12).
wgpu = { version = "26", default-features = false }
# Exception #3 (§5): TLS / crypto. Своя реализация — security antipattern.
rustls = { version = "0.23", features = ["std"] }
webpki-roots = "0.26"
# Exception #5 (§5): SQLite — persistent storage для history, bookmarks, notes,
# read-later, cookies (TTL), профилей и knowledge layer (FTS5). 25 лет audit-а
# и TH3-тестирование; стандарт в индустрии браузеров (Firefox places.sqlite,
# Chromium History, Safari). Feature `bundled` компилирует SQLite в бинарь —
# нулевая runtime-зависимость от системного libsqlite3.
rusqlite = { version = "0.32", features = ["bundled"] }
# Exception #6 (§5): regex — find-in-page regex matching; стандарт де-факто в Rust.
regex = "1"
# Exception #7 (§5): serde + bincode — DOM snapshot serialization для T3 hibernation
# (ADR-008 Invariant 1). serde — де-факто стандарт сериализации в Rust. bincode —
# compact binary format без heap-allocation на decode; размер снимка ~5× меньше JSON.
# Graduation: permanent (используется во всех крейтах где нужен snapshot/IPC).
serde = { version = "1", features = ["derive"] }
bincode = "1"
# Provisional: flate2 для ICC profile decompression в PNG (iCCP chunk uses deflate).
flate2 = "1"
# Provisional: lz4_flex — LZ4 frame compression for T2 sleeping-tab JS heap blobs
# (GG-5, ADR-008 §10I). Pure-Rust, zero unsafe, no C toolchain. Faster than zlib
# at comparable ratio for binary blobs (QuickJS heap = mixed data). Graduation
# criterion: replace with zstd frame when a stable pure-Rust impl matures (§5).
lz4_flex = "0.11"
# Provisional: tracy-client — opt-in visual profiler (Tracy GUI app,
# https://github.com/wolfpld/tracy), feature-gated behind `tracy` in every
# crate that uses it so normal builds pay zero cost/binary size (§14.3,
# BUG-284 perf investigation — replaces guesswork with a real timeline view).
# Graduation: promote to a permanent, always-buildable dev profile once the
# profiling workflow is established in CI; otherwise swapped for a different
# profiler if `tracy` proves impractical.
tracy-client = { version = "0.17", default-features = false }
# Provisional: hyphenation — Knuth-Liang алгоритм переносов для CSS `hyphens: auto`.
# Trait-anchor: `lumen-core::ext::HyphenationProvider`. Graduation: permanent когда
# перенос слов станет стандартной частью pipeline (§5, Phase 2-3).
hyphenation = { version = "0.8", features = ["embed_all"] }
# Exception #8 (§5): pdf-writer — zero-copy PDF serialisation for --print-to-pdf.
# Permanent-tier: content encoding (PDF), no suitable alternative in Rust ecosystem.
# Provisional until print pipeline stabilises, then promoted to permanent.
pdf-writer = "0.12"

[profile.dev]
opt-level = 1
# Полный debuginfo (дефолт debug = 2) — главная скрытая стоимость dev-профиля:
# генерация + запись PDB линкером. line-tables-only сохраняет file:line в
# backtrace при панике; для пошаговой отладки собирай --profile debugging.
# Замер и источники — docs/build-speed.md §3.1.
debug = "line-tables-only"

# Сторонние зависимости (wgpu, winit, rustls, webpki-roots и их транзитивный
# набор ~200 крейтов) собираются с opt-level = 3 даже в dev. Наш код остаётся
# на opt-level = 1: умеренная скорость компиляции при сохранении читаемой
# stack-trace. Wildcard `*` действует только на dependencies (не workspace
# members), поэтому собственные крейты Lumen не затрагиваются.
[profile.dev.package."*"]
opt-level = 3
debug = false                # зависимостям debuginfo не нужен вовсе

# Профиль для реальной пошаговой отладки под дебаггером (полный debuginfo):
#   cargo build -p lumen-shell --profile debugging
[profile.debugging]
inherits = "dev"
debug = true

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

# Профиль для разработки: в 2–3 раза быстрее сборки чем release при той же
# корректности кода. Используй для graphic_tests и итеративной отладки:
#   cargo build -p lumen-shell --profile dev-release
# Или через run.py:  python graphic_tests/run.py --build-profile dev-release
[profile.dev-release]
inherits = "release"
lto = false
codegen-units = 8
strip = false
debug = false
# Инкремент действует только на workspace-members (registry-зависимости cargo
# и так собирает неинкрементально). Пересборка после touch: shell 39–47с → ?,
# каскад layout→shell 50с → ? — замер docs/build-speed.md §4.3.
incremental = true
