[package]
name = "lumen-driver"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

# Why this dependency (lumen-core): shared error types, URL, geom primitives — permanent.
# Why this dependency (lumen-encoding): charset detection/decode for HTML bytes — permanent.
# Why this dependency (lumen-html-parser): parse HTML bytes into Document — permanent.
# Why this dependency (lumen-css-parser): parse stylesheets — permanent.
# Why this dependency (lumen-dom): Document, NodeId for DOM traversal — permanent.
# Why this dependency (lumen-layout): run layout pipeline, LayoutBox, ComputedStyle — permanent.
# Why this dependency (lumen-paint): build DisplayList, hit_test for click targeting — permanent.
# Why this dependency (lumen-a11y): build accessibility tree for query_a11y methods — permanent.
# Why this dependency (lumen-network): HTTP client for URL navigation — permanent.
# Why this dependency (lumen-image): encode screenshots to PNG — permanent.
# Why this dependency (winit): OS event loop for WinitSession (display/graphics transport) — permanent.
# Why this dependency (lumen-paint): GPU rendering for screenshots and visualization — permanent.
# Why this dependency (lumen-storage): session state, history, cookies persistence — permanent.
[dependencies]
lumen-core = { workspace = true }
lumen-encoding = { workspace = true }
lumen-html-parser = { workspace = true }
lumen-css-parser = { workspace = true }
lumen-dom = { workspace = true }
lumen-layout = { workspace = true }
# backend-wgpu: driver uses Renderer directly for headless GPU snapshots (WinitSession).
lumen-paint = { workspace = true, features = ["backend-wgpu"] }
lumen-a11y = { workspace = true }
lumen-font = { workspace = true }
lumen-image = { workspace = true }
lumen-network = { workspace = true }
lumen-storage = { workspace = true }
# Exception #1: winit for OS windowing
winit.workspace = true
# Why this dependency (serde): serialization for network transport (MCP, BiDi) — permanent.
serde = { version = "1.0", features = ["derive"] }
# Why this dependency (serde_json): JSON serialization for BrowserSession.a11y_tree() and computed_style() — permanent.
serde_json = "1.0"

[features]
# Deterministic CPU rasterization for snapshot tests (8A.6): forwards to
# lumen-paint's tiny-skia path so InProcessSession can render cross-OS-identical
# pixels without a GPU. Off by default; enable with --features cpu-render.
cpu-render = ["lumen-paint/cpu-render"]

# CompareBackend integration tests (ADR-010 RB-8): enables CompareBackend + CpuBackend
# for pixel-diff comparison between two headless backends.
compare-backends = ["lumen-paint/compare"]
