[package]
name = "lumen-driver"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

# Why this dependency (lumen-core): shared error types, URL, geom primitives — permanent.
# Why this dependency (lumen-encoding): charset detection/decode for HTML bytes — permanent.
# Why this dependency (lumen-html-parser): parse HTML bytes into Document — permanent.
# Why this dependency (lumen-css-parser): parse stylesheets — permanent.
# Why this dependency (lumen-dom): Document, NodeId for DOM traversal — permanent.
# Why this dependency (lumen-layout): run layout pipeline, LayoutBox, ComputedStyle — permanent.
# Why this dependency (lumen-paint): build DisplayList, hit_test for click targeting — permanent.
# Why this dependency (lumen-a11y): build accessibility tree for query_a11y methods — permanent.
# Why this dependency (lumen-network): HTTP client for URL navigation — permanent.
# Why this dependency (lumen-image): encode screenshots to PNG — permanent.
# Why this dependency (winit): OS event loop for WinitSession (display/graphics transport) — permanent.
# Why this dependency (lumen-paint): GPU rendering for screenshots and visualization — permanent.
# Why this dependency (lumen-storage): session state, history, cookies persistence — permanent.
[dependencies]
lumen-core = { workspace = true }
lumen-encoding = { workspace = true }
lumen-html-parser = { workspace = true }
lumen-css-parser = { workspace = true }
lumen-dom = { workspace = true }
lumen-layout = { workspace = true }
# backend-wgpu: driver uses Renderer directly for headless GPU snapshots (WinitSession).
lumen-paint = { workspace = true, features = ["backend-wgpu"] }
lumen-a11y = { workspace = true }
lumen-font = { workspace = true }
lumen-image = { workspace = true }
lumen-network = { workspace = true }
lumen-storage = { workspace = true }
# Phase 4: QuickJS runtime for JS eval in headless mode (SDC-1a).
lumen-js = { workspace = true, optional = true }
# Exception #1: winit for OS windowing
winit.workspace = true
# Why this dependency (serde): serialization for network transport (MCP, BiDi) — permanent.
serde = { version = "1.0", features = ["derive"] }
# Why this dependency (serde_json): JSON serialization for BrowserSession.a11y_tree() and computed_style() — permanent.
serde_json = "1.0"
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[features]
# DEVX-5: InProcessSession is the backing session for headless MCP
# (`--mcp`/`--mcp-port`, no window/GPU adapter) — its `BrowserSession::screenshot`
# needs the CPU path by default, not opt-in, or the MCP `screenshot` tool fails
# at runtime on any machine without a usable GPU adapter (CI, most servers).
# `v8` is also default (slice 2): `lumen-mcp`'s standalone binary builds a plain
# `InProcessSession::new()` with crate defaults, so `click`/`type_text`/`eval`
# need the persistent V8 runtime on by default, not opt-in, to actually work.
default = ["cpu-render", "v8"]

# Deterministic CPU rasterization for snapshot tests (8A.6) and the default
# headless screenshot path (DEVX-5): forwards to lumen-paint's tiny-skia path
# so InProcessSession can render cross-OS-identical pixels without a GPU.
cpu-render = ["lumen-paint/cpu-render"]

# QuickJS runtime for JS eval in headless mode (SDC-1a, WinitSession only).
quickjs = ["dep:lumen-js"]

# DEVX-5 slice 2: persistent V8 runtime for InProcessSession's click/type_text/
# eval (ADR-018 — V8 is the default JS engine). Unlike `quickjs`'s one-shot,
# DOM-snapshot-bound `WinitSession::eval`, this runtime is installed once per
# `navigate()` against the same `Arc<Mutex<Document>>` the session's layout
# reads, so JS-driven DOM mutations from dispatched events stay visible.
v8 = ["dep:lumen-js", "lumen-js/v8-backend"]

# CompareBackend integration tests (ADR-010 RB-8): enables CompareBackend + CpuBackend
# for pixel-diff comparison between two headless backends.
compare-backends = ["lumen-paint/compare"]
