[package]
name = "lumen-ipc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
lumen-core = { workspace = true }
# Exception #7 (§5): serde + bincode — IPC message serialization over TCP loopback.
# Same workspace entry used for DOM snapshot serialization (ADR-008).
serde = { workspace = true }
bincode = { workspace = true }
