[package]
name = "lumen-js"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Lumen JS runtime: QuickJS implementation of the JsRuntime trait"

[dependencies]
lumen-core = { workspace = true }
# lumen-dom: needed for JS↔DOM bindings (task 4A). Not a new external dep —
# already in the workspace. lumen-js is the natural owner of DOM/JS bridge code.
lumen-dom = { workspace = true }
# lumen-paint: needed for GpuFingerprint (ADR-007 Layer 4, WebGL fingerprinting prevention).
lumen-paint = { workspace = true }
# lumen-css-parser: needed for window.matchMedia() — parses media queries and
# evaluates them against the current MediaContext (viewport size + user prefs).
lumen-css-parser = { workspace = true }
# Permanent #5 (§5): JS engine. QuickJS for Phase 0–1; rusty_v8 planned for v1.0+.
# Rationale: writing a JS engine from scratch is not in scope for Lumen.
rquickjs = "0.11"
# Permanent: OS CSPRNG bytes for Web Crypto API (getRandomValues/randomUUID).
# Minimal dep — delegates directly to OS (CryptGenRandom/getrandom syscall).
getrandom = "0.2"
# Permanent: SHA-1/256/384/512 for SubtleCrypto.digest(). Tiny pure-Rust crate.
# Security-critical; pure-JS alternatives are slower and harder to audit.
sha2 = "0.10"
sha1 = "0.10"
# Provisional: deflate compression for QuickJS heap snapshots (ADR-008 §10C.3,
# cap 5 MB/tab). Reuses the already-vendored flate2 (PNG iCCP path; also used by
# lumen-storage for DOM-blob compression in §10J.1) — no new external dependency.
flate2.workspace = true

[dev-dependencies]
