[package]
name = "lumen-js"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Lumen JS runtime: QuickJS implementation of the JsRuntime trait"

[dependencies]
lumen-core = { workspace = true }
# lumen-dom: needed for JS↔DOM bindings (task 4A). Not a new external dep —
# already in the workspace. lumen-js is the natural owner of DOM/JS bridge code.
lumen-dom = { workspace = true }
# lumen-paint: needed for GpuFingerprint (ADR-007 Layer 4, WebGL fingerprinting prevention).
lumen-paint = { workspace = true }
# lumen-canvas: needed for Canvas 2D API (canvas.getContext('2d')). Workspace-internal
# crate (no new external dep) — CPU-rasterized drawing surface wired to JS via canvas2d.rs.
lumen-canvas = { workspace = true }
# lumen-css-parser: needed for window.matchMedia() — parses media queries and
# evaluates them against the current MediaContext (viewport size + user prefs).
lumen-css-parser = { workspace = true }
# lumen-layout: needed for querySelector compound selector matching.
# Provides query_all(doc, sel) which uses the full CSS3 selector engine from style.rs
# (compound selectors, combinators, pseudo-classes). No circular dep: layout does not
# depend on lumen-js. Workspace-internal, no new external dependency.
lumen-layout = { workspace = true }
# lumen-font: needed for Canvas 2D text rendering — fillText/strokeText/measureText (Phase 4).
# Workspace-internal crate (no new external dep) — provides Font::parse, Rasterizer, cmap/hmtx
# tables needed to lay out and rasterize glyph bitmaps for the canvas drawing surface.
lumen-font = { workspace = true }
# lumen-image: needed for createImageBitmap(Blob) (P1-imagebitmap) — decodes the Blob's
# raw bytes (PNG/JPEG/WebP/GIF/AVIF) to RGBA8 via lumen_image::decode, same decoder the
# shell already uses for <img>/background-image. Workspace-internal crate (no new
# external dep); `avif` feature matches the shell's existing choice (already requires
# cmake+nasm on the build host for the shell binary, so this adds no new toolchain need).
lumen-image = { workspace = true, features = ["avif"] }
# Permanent #5 (§5): JS engine. QuickJS for Phase 0–1; rusty_v8 planned for v1.0+.
# Rationale: writing a JS engine from scratch is not in scope for Lumen.
# `loader` feature: enables ES6 module resolver/loader API (Resolver + Loader traits +
# Runtime::set_loader) required for <script type=module> support.
rquickjs = { version = "0.11", features = ["loader"] }
# Permanent: OS CSPRNG bytes for Web Crypto API (getRandomValues/randomUUID).
# Minimal dep — delegates directly to OS (CryptGenRandom/getrandom syscall).
getrandom = "0.2"
# Permanent: SHA-1/256/384/512 for SubtleCrypto.digest(). Tiny pure-Rust crate.
# Security-critical; pure-JS alternatives are slower and harder to audit.
sha2 = "0.10"
sha1 = "0.10"
# Provisional: deflate compression for QuickJS heap snapshots (ADR-008 §10C.3,
# cap 5 MB/tab). Reuses the already-vendored flate2 (PNG iCCP path; also used by
# lumen-storage for DOM-blob compression in §10J.1) — no new external dependency.
flate2.workspace = true
# Permanent (crypto exception #3): ECDSA P-256 for SubtleCrypto.generateKey/sign/verify/
# importKey/exportKey. Same crate already used in lumen-network (WebAuthn, 9F).
# pkcs8 feature: spki/pkcs8 key import/export formats.
p256 = { version = "0.13", features = ["ecdsa", "pkcs8", "ecdh"] }
# Permanent (crypto exception #3): RSA-OAEP/RSA-PSS/RSASSA-PKCS1-v1_5 for SubtleCrypto.
# sha2 feature: enables SHA-2 hash adapters for OAEP/PSS/PKCS1v1.5 operations.
# Why: permanent; same RustCrypto family; rsa 0.9 already in lumen-network; no alternatives.
rsa = { version = "0.9", features = ["sha2"] }
# Permanent: OS CSPRNG via rand_core 0.6 interface — required by rsa::RsaPrivateKey::new().
# rsa 0.9 signs with rand_core 0.6 OsRng; getrandom 0.2 already present but wrong API shape.
# Why: permanent companion to rsa dep; no logic here, just entropy plumbing.
rand_core = { version = "0.6", features = ["getrandom"] }
# Provisional: HMAC-SHA256/384/512 for SubtleCrypto.sign/verify/generateKey/importKey.
# Pure-Rust, minimal; graduation criterion: remove if built-in sha2-based MAC suffices.
hmac = { version = "0.12", features = [] }
# Provisional: AES-GCM 128/256 for SubtleCrypto.encrypt/decrypt/generateKey/importKey.
# Standard AEAD for modern web crypto; pure-Rust via aes + ghash; no native code.
aes-gcm = "0.10"
# Permanent: AES block cipher for AES-CBC/CTR (SubtleCrypto). aes 0.8 is the
# RustCrypto standard, already pulled transitively by aes-gcm 0.10; this pins it
# explicitly so cbc/ctr can depend on the same version.
# Why: permanent crypto dep; same RustCrypto family as aes-gcm; no alternatives.
aes = { version = "0.8", features = ["zeroize"] }
# Permanent: AES-CBC mode (PKCS7 padding) — SubtleCrypto AES-CBC encrypt/decrypt.
# Why: permanent; small pure-Rust wrapper over aes 0.8; no alternatives in tree.
cbc = { version = "0.1", features = ["alloc"] }
# Permanent: AES-CTR stream cipher mode — SubtleCrypto AES-CTR encrypt/decrypt.
# Why: permanent; same RustCrypto family as aes/cbc; used alongside AES-CBC.
ctr = "0.9"
# Import Maps (HTML LS §8.1.6.2) JSON parsing for <script type="importmap">.
# Lightweight JSON parser; reuses serde which is already in the workspace.
serde_json = "1.0"
workspace-hack = { version = "0.1", path = "../../workspace-hack" }
# Permanent #5 (§5): V8 JS engine (rusty_v8). Optional dep behind `v8-backend` feature.
# Off-by-default until S12 cutover; main never breaks. V8 pre-built binaries are
# downloaded by v8's build.rs from GitHub releases on first build.
# Windows MSVC: use_custom_libcxx must NOT be enabled (MSVC uses its own CRT).
v8 = { version = "150.1.0", optional = true, default-features = false }

[features]
# Реальный WebGPU-бэкенд (U-4c, Stage 1): включает wgpu-устройство в lumen-paint и
# регистрирует нативы `_lumen_webgpu_*`, через которые JS-шим navigator.gpu получает
# настоящую информацию об адаптере и валидацию WGSL. Без фичи navigator.gpu остаётся
# чистым in-memory JS-шимом (Phase 0). Включается shell-фичей `quickjs`.
webgpu = ["lumen-paint/backend-wgpu"]
# V8 JS backend (rusty_v8). Replaces QuickJS at S12 cutover. Off by default until then.
v8-backend = ["dep:v8"]

[dev-dependencies]
