[package]
name = "lumen-mcp"
version.workspace = true
edition = "2024"
resolver = "3"
publish = false

[[bin]]
name = "lumen-mcp"
path = "src/main.rs"

[dependencies]
lumen-driver = { path = "../driver" }
lumen-core = { path = "../core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[dev-dependencies]
